<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/currentLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/currentLoc"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/locImage"
        android:layout_width="202dp"
        android:layout_height="245dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/uva_logo" />

    <TextView
        android:id="@+id/locInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locInfo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/toNextLocButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonNextLoc" />

</LinearLayout>