<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="top" >

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="14dp"
            android:gravity="top" >

            <TextView
                android:id="@+id/toLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextLocation"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/getLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="52dp"
                android:text="@string/nextLocation"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="34dp"
            android:baselineAligned="false"
            android:gravity="bottom" >
        </LinearLayout>

        <Button
            android:id="@+id/settings"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/imageView1"
            android:layout_weight="3.47"
            android:text="@string/settings" />

        <Button
            android:id="@+id/map"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/map" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/settings"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="22dp"
            android:src="@drawable/warmer" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/imageView1"
            android:src="@drawable/colder" />

        <Chronometer
            android:id="@+id/chronometer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/title"
            android:layout_marginTop="22dp"
            android:text="Chronometer" />

        <TextView
            android:id="@+id/nextLocCord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/chronometer1"
            android:text="@string/nextLocCord"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/userLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/nextLocCord"
            android:text="@string/userLoc"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>
